fix: vertical alignment of expandable section

--- a/src/expandable-section/styles.scss
+++ b/src/expandable-section/styles.scss
@@ -138,18 +138,23 @@ $icon-total-space-medium: calc(#{$icon-width-medium} + #{$icon-margin-left} + #{
       // Equal top and bottom padding so standalone header has vertical symmetry.
       padding-block-end: awsui.$space-container-header-top;
     }
-  }
-  &.header-deprecated {
-    padding-inline-start: container.$header-padding-horizontal;
-  }
-  &:not(.header-deprecated) {
-    padding-inline-start: calc(#{container.$header-padding-horizontal} + #{$icon-total-space-medium});
-  }
 
-  @include focus-visible.when-visible {
-    // HACK: Remediate focus border
-    padding-block: calc(#{awsui.$space-scaled-s} - #{awsui.$border-divider-section-width});
-    padding-inline: calc(#{awsui.$space-l} - #{awsui.$border-divider-section-width});
+    &.wrapper-not-expanded-without-actions {
+      padding-block-end: calc(#{awsui.$space-container-header-top} + #{awsui.$space-scaled-xxs});
+    }
+
+    &.header-deprecated {
+      padding-inline-start: container.$header-padding-horizontal;
+    }
+    &:not(.header-deprecated) {
+      padding-inline-start: calc(#{container.$header-padding-horizontal} + #{$icon-total-space-medium});
+    }
+
+    @include focus-visible.when-visible {
+      // HACK: Remediate focus border
+      padding-block: calc(#{awsui.$space-scaled-s} - #{awsui.$border-divider-section-width});
+      padding-inline: calc(#{awsui.$space-l} - #{awsui.$border-divider-section-width});
+    }
   }
 }
 
@@ -201,6 +206,11 @@ $icon-total-space-medium: calc(#{$icon-width-medium} + #{$icon-margin-left} + #{
     > .icon-container {
       margin-block-start: awsui.$space-expandable-section-icon-offset-top;
     }
+
+    // stylelint-disable-next-line @cloudscape-design/no-implicit-descendant -- header-text is nested within header-container-button
+    .header-text.not-expanded {
+      padding-block: awsui.$space-xxs;
+    }
   }
 
   &-navigation {
@@ -228,9 +238,7 @@ $icon-total-space-medium: calc(#{$icon-width-medium} + #{$icon-margin-left} + #{
   }
 
   &-text {
-    &.not-expanded {
-      padding-block: awsui.$space-xxs;
-    }
+    /* used in test-utils */
   }
 }
 
